ci: 去掉重复的配置，外部的可以覆盖这里